# Inspirermundi_graphsImplementation_fusion

./: build.gradle  import-summary.txt  settings.gradle
InhalerDetectionModule/: CMakeLists.txt  build.gradle
InhalerDetectionModule/src/main/: AndroidManifest.xml
InhalerDetectionModule/src/main/cpp/: gdirfiles.cpp  gdirfiles.h  jniWrapper.cpp  mainsubs.cpp  mainsubs.h  newutils.cpp  newutils.h  procs.cpp  procs.h  templateProps.cpp  templateProps.h  utils.cpp  utils.h  videoAcquisitionScriptOptimized.cpp  videoAcquisitionScriptOptimized.h
InhalerDetectionModule/src/main/java/org/medida/inhalerdetection/: DetectionActivity.java  ExampleMainActivity.java  ImageParser.java  ImageUtils.java  InhalerDetectionActivity.java  OpenCVCameraListener.java  PostDetectionActivity.java  PreDetectionActivity.java  PreInstructionDetectionActivity.java  TextRecognitionActivity.java
InhalerDetectionModule/src/main/res/layout/: activity_post_detection.xml  activity_pre_detection.xml  inhaler_detection_layout.xml
InhalerDetectionModule/src/main/res/values/: strings.xml
InhalerDetectionModule/src/main/res/values-es/: strings.xml
InhalerDetectionModule/src/main/res/values-pt/: strings.xml
ViewPagerIndicator/: build.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: fade_in.xml  fade_in_fill_enable.xml  rotate_fade_out.xml  scale_btn_anim.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary330/: build.gradle
openCVLibrary330/src/main/: AndroidManifest.xml
(+408 files in other folders)
